[FIX] merapikan tampilan index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
 
   <header>
-    <h1>Pokemon REST Client</h1>
+    <h1>Pokémon REST Client</h1>
 
     <nav>
       <a href="home.html">Home</a>
@@ -117,14 +117,11 @@
     </nav>
   </header>
 
-  <div class="container">
-    <h2>Selamat Datang di Pokemon REST Client</h2>
-    <p>
-      Ini adalah halaman utama (index).  
-      Kamu bisa menuju halaman galeri untuk melihat daftar Pokémon,  
-      atau kembali ke halaman Home.
-    </p>
-
+    <div class="container">
+    <h2>Selamat Datang!</h2>
+    <p>Ini adalah halaman utama aplikasi <b>Pokémon REST Client</b>.</p>
+    <p>Pada halaman HOME akan menampilkan beberapa Pokémon terkenal.</p>
+    <p>Jika ingin melihat seluruh koleksi Pokémon ada pada halaman GALLERY.</p>
 
 </body>
 </html>
