[FIX] laman home.html

--- a/home.html
+++ b/home.html
@@ -136,9 +136,8 @@
 
   <div class="container">
     <h2>Pokémon Terpopuler</h2>
-    <p>Beberapa koleksi Pokémon paling terkenal dan banyak disukai di seluruh dunia. 
-        Lihat Semua Koleksi Pokémon pada Gallery.
-    </p>
+    <p>Beberapa koleksi Pokémon paling terkenal dan banyak disukai di seluruh dunia.</p>
+    <p> Lihat Semua Koleksi Pokémon pada Gallery.</p>
 
     <div class="grid">
       
